# netbox-graylog

./: CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
netbox_graylog/: __init__.py  forms.py  graylog_client.py  models.py  navigation.py  urls.py  views.py  widgets.py
netbox_graylog/migrations/: 0003_mark_stub_model_private.py
netbox_graylog/templates/netbox_graylog/: device_logs_tab.html  endpoint_logs_tab.html  logs_tab.html  logs_tab_content.html  settings.html  vm_logs_tab.html
netbox_loki/: __init__.py  forms.py  loki_client.py  models.py  navigation.py  urls.py  views.py  widgets.py
netbox_loki/migrations/: 0001_initial.py  0002_rename_model.py  0003_mark_stub_model_private.py
netbox_loki/templates/netbox_loki/: device_logs_tab.html  endpoint_logs_tab.html  logs_tab.html  settings.html  vm_logs_tab.html
netbox_loki/templates/netbox_loki/widgets/: loki_summary.html
