[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-loki"
version = "0.0.8"
description = "NetBox plugin to display Loki logs in device, VM, and endpoint detail pages"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Serhii Zahuba", email = "--@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["netbox", "loki", "logging", "plugin"]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/SerhiiZahuba/netbox-loki"
Repository = "https://github.com/SerhiiZahuba/netbox-loki"
Issues = "https://github.com/SerhiiZahuba/netbox-loki/issues"
Documentation = "https://github.com/SerhiiZahuba/netbox-loki"
Changelog = "https://github.com/SerhiiZahuba/netbox-loki/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["netbox_loki*"]

[tool.setuptools.package-data]
netbox_loki = ["templates/**/*.html"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120
